﻿﻿                     wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.28 (Beta 3)
* Fixed FS#143 — "Silent code generation failure in case of an invalid project path."
   This was a regression in Version 3.00.27.

03-02-2007 Version 3.00.27 (Beta 3)
^ Implemented FS#142 — "set wxStaticline’s default value to wxEXPAND"
^ Implemented FS#140 — "Better code generation selection implementation."
   Always generate code to the visible panel.
   Added -l (language) command line option to specify languages to generate
    when generating from command line. Separate multiple languages with commas.

03-01-2007 Version 3.00.26 (Beta 3)
* Fixed FS#136 — "Panel size doesn't change properly when 'size' is set to -1"
* Fixed FS#137 — "Allow -1 for the 'size' property if the minimum/maximum size is set."
* Fixed FS#113 — "Error when undoing cutting controls."
* Fixed FS#97 — "Menu items in XRC preview window involve wxFB functionality"
^ Implemented FS#117 — "ESC should close the XRC preview form."
   Note: This will never work on wxGTK because it does not set key events to frames or dialogs.

02-28-2007 Version 3.00.25 (Beta 3)
* Fixed FS#100 — "Problem with the relative path of XPM"
* Fixed FS#126 — "Splitter window control without a panel does not get redrawn correctly."
* Fixed FS#132 — "Splitter window control moves its sash unexpectedly at design time."
* Fixed spacer not displaying properly in most sizers.
  This was a regression in build 3.00.23.
* Fixed FS#133 — "Error when moving between designer/C++/XRC tabs."
  This was a regression in build 3.00.24.
^ Now connecting an event handler to idle events for splitter windows to reliably
  set the initial sash position.

02-27-2007 Version 3.00.24 (Beta 3)
* Fixed FS#131 — "Folder not getting released after saving a project into it."
* Fixed FS#114 — "Not being able to cut non-top-level sizers and paste them as top-level sizers."